--- a/apps/luckydraw/src/index.html
+++ b/apps/luckydraw/src/index.html
@@ -8,8 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link
+  rel="stylesheet"
+  href="assets/bootstrap.min.css"
+/>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+  <script
+    src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+    crossorigin></script>
+
+  <script
+    src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin></script>
 </html>
